# telcoproject

./: .env.example  .gitignore  Dockerfile  JUDGES.md  LICENSE  Makefile  README.md  checklist  docker-compose.yml  modal_deploy.py  plan  pyproject.toml  requirements.txt  skills-lock.json
PRD/: BUILD_PLAN_5DAY.md  PRD_Project_B_Churn_Intervention_Recommender.docx  PRD_v2_Naija_Persona_Agent.md  PRD_v3_Naija_Persona_Agent_AllOut.md  PRD_v4_NPA_5Day.md  agentsociety_nigeria_guide (2).md
app/: __init__.py  config.py
demo/: streamlit_app.py
deploy/: modal_naija.py  test_modal.py
finetuning/: Modelfile  README.md  eval_naija_reviewer.py  train_naija_reviewer.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend_v2/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
notebooks/: 01_build_corpus.ipynb  01b_build_corpus_openai.ipynb  02_finetune.ipynb  03_training_results.ipynb  naija_reviewer_8b_end_to_end.ipynb
paper/: README.md  audit_report.json  audit_report.md  final_paper_a.tex  final_paper_b.tex  human_eval_pairs_master.json  human_eval_summary.json  human_eval_summary.md  human_eval_template.xlsx  llm_judge_summary.json  llm_judge_summary.md  paper.tex  paper_task_a.tex  paper_task_b.tex  references.bib  results.json  results.md  results_ablation.json  results_ablation.md  results_pre_cohere_baseline.json  results_register_fidelity.json  task_b_human_eval_master.json  task_b_human_eval_summary.json  task_b_human_eval_summary.md  task_b_human_eval_template.xlsx
scripts/: aggregate_human_eval_xlsx.py  aggregate_task_b_human_eval_xlsx.py  build_finetune_corpus.py  build_human_eval_xlsx.py  build_pinecone_index.py  build_product_index.py  build_task_b_human_eval_xlsx.py  build_test_set_v2.py  eval_ablation.py  eval_all.py  eval_audit.py  eval_register_fidelity.py  (+5 more)
(+171 files in other folders)
